<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_information_close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/information"
            android:textColor="@color/neutral_900"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toTopOf="@id/iv_close"
            app:layout_constraintStart_toEndOf="@id/iv_close"
            app:layout_constraintBottom_toBottomOf="@id/iv_close"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_camera_information"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintTop_toBottomOf="@id/iv_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_information_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/camera_information_title"
            android:textColor="@color/primary_500"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/lav_camera_information" />

        <TextView
            android:id="@+id/tv_information_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/camera_information_description"
            android:textColor="@color/neutral_900"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_information_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>